--- a/mcts/pyproject.toml
+++ b/mcts/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
 [tool.poetry]
 packages = [{include = "mcts", from = "src"}]
 
+[tool.poetry.scripts]
+mcts = "mcts.main:main"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
