--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,20 @@ packages = [{include = "mcts", from = "src"}]
 mcts = "mcts.main:main"
 
 [tool.poetry.group.dev.dependencies]
+mypy = "^1.16.1"
 taskipy = "^1.14.1"
 
 [tool.taskipy.tasks]
+lint = "mypy --show-error-context --pretty src"
+
+[tool.mypy]
+warn_unused_configs = true
+show_column_numbers = true
+show_error_codes = true
+sqlite_cache = true
+strict = true
+plugins = []
+files = ["src/**/*.py"]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
