--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "name": "mcts",
 
-    "image": "mcr.microsoft.com/devcontainers/python:1-3.13-bookworm",
+    "image": "mcr.microsoft.com/devcontainers/python:2-3.13-trixie",
 
     "postCreateCommand": "./.devcontainer/setup.sh",
 
